--- a/index.html
+++ b/index.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>G3 Architects</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <h3 class="h">G3 Architects</h3>
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Log in</a></li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <div class="banner-cont">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+          <p class="banpera">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam
+            itaque rem temporibus aliquam natus iure molestias eius quod eos
+            minima magnam dolore nihil, culpa iste dolores blanditiis placeat?
+            Accusantium, adipisci.
+          </p>
+          <button class="btn">Explore Now</button>
+          <img class="banner-img" src="images/banner.png" alt="" />
+        </div>
+      </div>
+    </header>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
