--- a/index.html
+++ b/index.html
@@ -31,7 +31,29 @@
         </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <section class="team-container">
+        <div class="teams-img-container">
+          <img src="images/team1.png" alt="" />
+          <img src="images/team2.png" alt="" />
+          <img src="images/team3.png" alt="" />
+          <img src="images/team4.png" alt="" />
+        </div>
+        <div class="team-content">
+          <h3 class="team-title">
+            <span class="quick">Quick List</span> <span>Of Our</span>
+            <span class="feat">Features</span>
+          </h3>
+          <p class="pera">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut esse
+            qui aperiam aspernatur, maxime dicta fugiat accusamus id ratione
+            dolore deleniti repellat suscipit voluptatum dignissimos,
+            necessitatibus quo nobis recusandae eius.
+          </p>
+          <button class="btn">Explore Now</button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
