--- a/index.html
+++ b/index.html
@@ -53,6 +53,38 @@
           <button class="btn">Explore Now</button>
         </div>
       </section>
+      <section class="features"></section>
+      <section class="facts">
+        <h3 class="team-title">Some Facts</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic placeat
+          quia accusantium minus quibusdam quas, ea porro consequuntur fuga,
+          aliquid vel suscipit amet illo rerum provident excepturi id beatae
+          non.
+        </p>
+        <div class="fats-container">
+          <div class="card">
+            <img src="images/icons/ribon.png" alt="" />
+            <h2 class="card-stats">54</h2>
+            <p class="card-title">Awards Winnings</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/projects.png" alt="" />
+            <h2 class="card-stats">1458</h2>
+            <p class="card-title">projects finished</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/email.png" alt="" />
+            <h2 class="card-stats">22578</h2>
+            <p class="card-title">E-mail send</p>
+          </div>
+          <div class="card">
+            <img src="images/icons/customers.png" alt="" />
+            <h2 class="card-stats">590</h2>
+            <p class="card-title">Client worked</p>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
