--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           aliquid vel suscipit amet illo rerum provident excepturi id beatae
           non.
         </p>
-        <div class="fats-container">
+        <div class="facts-container">
           <div class="card">
             <img src="images/icons/ribon.png" alt="" />
             <h2 class="card-stats">54</h2>
@@ -83,6 +83,19 @@
             <h2 class="card-stats">590</h2>
             <p class="card-title">Client worked</p>
           </div>
+        </div>
+      </section>
+      <section class="sponsors">
+        <h3 class="sec-title">Our Sponsors</h3>
+        <p class="banpera">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+        </p>
+        <div class="sponsors-img-container">
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
         </div>
       </section>
     </main>
