--- a/index.html
+++ b/index.html
@@ -53,7 +53,51 @@
           <button class="btn">Explore Now</button>
         </div>
       </section>
-      <section class="features"></section>
+      <section class="features">
+        <div class="feature-container">
+          <h3 class="section-title">
+            Features you will <br />
+            love & enjoy
+          </h3>
+          <p class="banpera">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam quod
+            quaerat, officia saepe culpa corrupti sed similique id voluptatibus,
+            molestiae facere obcaecati expedita eligendi beatae ipsam? Facere
+            adipisci nulla dicta.
+          </p>
+          <div class="card">
+            <h4>Dextop & Mobile Version</h4>
+            <p class="banpera">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <div class="card">
+            <h4>Dextop & Mobile Version</h4>
+            <p class="banpera">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <div class="card">
+            <h4>Dextop & Mobile Version</h4>
+            <p class="banpera">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+          <div class="card">
+            <h4>Dextop & Mobile Version</h4>
+            <p class="banpera">
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            </p>
+          </div>
+        </div>
+        <div class="features-img">
+          <img src="images/architect.png" alt="" />
+          <div class="ten-years-badge">
+            <h2>10+years</h2>
+            <p>Experience</p>
+          </div>
+        </div>
+      </section>
       <section class="facts">
         <h3 class="team-title">Some Facts</h3>
         <p>
